Swaggwr working for login controller
